trying to fix bug on background on small devices

--- a/style.css
+++ b/style.css
@@ -493,6 +493,9 @@ footer {
 }
 
 @media screen and (max-width:990px) {
+    #home, #cv, #projects, #contact, footer {
+        background-attachment: scroll;
+    }
     #home .container .row div {
         padding-top: 18%;
         margin-top: 7%;
